feat: working in uploading documents to create templates with pdfs documents
