# backend/src/main/java/com/lewisrp/basemessages/backend/adapter/persistence/entity/TemplateEntity.java
@@ -38,6 +38,14 @@ public class TemplateEntity {
 
     private String metaError;
 
+    private String headerType;
+
+    private String headerHandle;
+
+    private String headerDocumentUrl;
+
+    private String headerDocumentKey;
+
     private LocalDateTime createdAt;
 
     private LocalDateTime updatedAt;
